--- a/siteplan.css
+++ b/siteplan.css
@@ -1,14 +1,78 @@
+body {
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+    margin: 0 auto;
+    background-color: white;
+    font-size: 125%;
+
+}
+header, footer {
+    background-color: #B8B8B7;
+    color: #0b0b45;
+    margin: 0 auto;
+    padding: 5px;
+    text-align: center;
+    width: 100%;
+}
+
 h1 {
     font-family: 'Marck Script', cursive;
-    font-size: 2.0em;
+    font-size: 3.0em;
     grid-column: 2/3;
     align-self: center;
 }
 
-body {
-    font-family: 'Roboto Mono', monospace;
+
+ ul {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    
+  } 
+nav {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    
 }
-header {
-    background-color: #040451; 
+nav ul li a {
+    color: #0b0b45;
+    text-decoration: none;
+}
+
+#fonttype {
+    font-family: 'Marck Script', cursive;
+}
+
+.color {
+    display:grid;
+    grid-template-columns: auto auto auto;
+}
+
+.griditem {
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  
+}
+#blue {
     color: white;
+    background-color: #0b0b45;
+    font-size: 150%;
 }
+
+#grey {
+    background-color:#B8B8B7
+}
+#white {
+    background-color: white;
+}
+
+
+
+    
+
+
+
