--- a/contact-form.css
+++ b/contact-form.css
@@ -10,6 +10,10 @@ text-align: center;
     font-size: 0.75em;
 }
 
+main {
+  font-size: 1.3em;
+}
+
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
@@ -31,6 +35,16 @@ input[type=email], select, textarea {
     margin-bottom: 16px;
     resize: vertical;
   }
+  input[type=tel], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
 
 input[type=submit] {
   background-color: #0b0b45;
@@ -39,6 +53,7 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: 15px;
 }
 
 input[type=submit]:hover {
