--- a/large.css
+++ b/large.css
@@ -1,5 +1,6 @@
+/*all HTML CSS */
 img {
-    max-width: 350px;
+    max-width: 400px;
 }
 body {
     text-align: center;
@@ -16,11 +17,12 @@ header, footer {
     padding: 5px;
     text-align: center;
     width: 100%;
+    font-size: 1.5em;
 }
 
 h1 {
     font-family: 'Marck Script', cursive;
-    font-size: 3.0em;
+    font-size: 3.5em;
     grid-column: 2/3;
     align-self: center;
     padding: 10px;
@@ -45,13 +47,16 @@ nav {
 nav ul li a {
     color: #0b0b45;
     text-decoration: none;
+    font-size:1em;
 }
 
 
 .categories {
     display:grid;
+    max-width: 1000px;
     grid-template-columns: auto auto;
     place-items: center;
+    margin: 0 auto;
 }
 
 .griditem {
@@ -69,14 +74,14 @@ nav ul li a {
 }
 .gridJeri {
   padding: 20px;
-  font-size: 1.25em;
+  font-size: 1.3em;
   text-align: center;
   
 }
 
 .pricing {
     display:grid;
-    grid-template-columns: 25% 25%;
+    grid-template-columns: 375px 400px;
     place-items: center;
     justify-content: center; 
 }
@@ -88,12 +93,54 @@ nav ul li a {
 
 .gridprice {
     grid-column: 2;
-    text-align: left;
+    font-size: 1.3em;
+    
 }
 
 #cutebaby {
     height: 500px;
 }
+/*babies.html CSS*/ 
+.babiescontainer {
+   column-count: 3;
+   max-width: 1300px;
+   margin: 0 auto;
+   padding: 30px;
+}
 
+.item {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 20px;
+    padding: 10px;
 
+}
+
+a {
+    text-decoration: none;
+    color: #0b0b45;
+}
+/*FAMILIES HTML CSS*/
+.familiescontainer {
+    column-count: 3;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 30px;
+}
+/* ENAGEMENT HTML CSS */
+.engagementcontainer{
+    column-count: 3;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 30px;
+}
+/*meet Jeri Photo */
+#johnstonfamily {
+    max-width: 600px;
+}
+ /*Index.HTML Transition Code*/
+   .griditem:hover {
+    transform: scale(1.3);
+    }
 
