--- a/contact-form.css
+++ b/contact-form.css
@@ -64,4 +64,6 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+  width: 50%;
+  margin: 0 auto;
 }
